Add sample json file for limits

--- a/.gitignore
+++ b/.gitignore
@@ -253,6 +253,6 @@ NordicSemiconductor/GuruxDLMSSimpleServerExample2/src/dlms
 *.lock
 development/VS/.vs/
 GuruxDLMSClientExample/VS/.vs/
-*.json
+.vscode
 *.bin
 *.hex
