Set limits to simulate meter in json file

--- a/GuruxDLMSSimpleServerExample/sample_config/config.json
+++ b/GuruxDLMSSimpleServerExample/sample_config/config.json
@@ -1,48 +1,48 @@
 {
     "voltage_limits": {
         "L1": {
-            "lower_limit": 210,
-            "upper_limit": 230
+            "lower_limit": 108000,
+            "upper_limit": 112000
         },
         "L2": {
-            "lower_limit": 215,
-            "upper_limit": 235
+            "lower_limit": 108000,
+            "upper_limit": 112000
         },
         "L3": {
-            "lower_limit": 220,
-            "upper_limit": 240
+            "lower_limit": 108000,
+            "upper_limit": 112000
         }
     },
     "current_limits": {
         "L1": {
             "lower_limit": 0,
-            "upper_limit": 100
+            "upper_limit": 1000000
         },
         "L2": {
             "lower_limit": 0,
-            "upper_limit": 100
+            "upper_limit": 1000000
         },
         "L3": {
             "lower_limit": 0,
-            "upper_limit": 100
+            "upper_limit": 1000000
         }
     },
     "frequency_limits": {
-            "lower_limit": 49.5,
-            "upper_limit": 50.5
+            "lower_limit": 49800,
+            "upper_limit": 50200
     },
     "power_factor_limits": {
         "L1": {
-            "lower_limit": -1,
-            "upper_limit": 1
+            "lower_limit": 100,
+            "upper_limit": 990
         },
         "L2": {
-            "lower_limit": -1,
-            "upper_limit": 1
+            "lower_limit": 100,
+            "upper_limit": 990
         },
         "L3": {
-            "lower_limit": -1,
-            "upper_limit": 1
+            "lower_limit": 100,
+            "upper_limit": 990
         }
     },
     "block_energy_limits": {
@@ -61,16 +61,6 @@
         "kVAh_import": {
             "lower_limit": 0,
             "upper_limit": 10000
-        }
-    },
-    "cumulative_energy_limits": {
-        "kWh_import": {
-            "lower_limit": 0,
-            "upper_limit": 100000
-        },
-        "kVAh_import": {
-            "lower_limit": 0,
-            "upper_limit": 100000
         }
     }
 }
