Add stack guard and add more space to pdu

--- a/GuruxDLMSSimpleServerExample/makefile
+++ b/GuruxDLMSSimpleServerExample/makefile
@@ -4,7 +4,7 @@ TARGET   = gurux.dlms.simple.server.bin
 CC       = gcc
 
 # compiling flags here
-CFLAGS   = -std=gnu99 -Wall -I. -IcJSON/include
+CFLAGS   = -std=gnu99 -fstack-protector-all -Wall -I. -IcJSON/include
 
 LINKER   = gcc -o
 
