Conditional compilation only working for three phase meter using makefile

--- a/GuruxDLMSSimpleServerExample/makefile
+++ b/GuruxDLMSSimpleServerExample/makefile
@@ -1,18 +1,17 @@
-# project name (generate executable with this name)
+# Project name (generate executable with this name)
 TARGET   = gurux.dlms.simple.server.bin
 
 CC       = gcc
 
-# compiling flags here
+# Compiling flags here
 CFLAGS   = -std=gnu99 -fstack-protector-all -Wall -I. -IcJSON/include
 
 LINKER   = gcc -o
 
-# linking flags here
+# Linking flags here
 LFLAGS   = -L../development/lib 
 
-# change these to set the proper directories where each files should be
-
+# Change these to set the proper directories where each file should be
 SRCDIR   = src
 OBJDIR   = obj
 BINDIR   = bin
@@ -24,10 +23,6 @@ OBJECTS  := $(patsubst $(SRCDIR)/%.c, $(OBJDIR)/%.o, $(filter $(SRCDIR)/%, $(SOU
             $(patsubst $(CJSONDIR)/%.c, $(OBJDIR)/%.o, $(filter $(CJSONDIR)/%, $(SOURCES)))
 rm       = rm -f
 
-$(BINDIR)/$(TARGET): $(OBJECTS)
-	@$(LINKER) $@ $(LFLAGS) $(OBJECTS) -lgurux_dlms_c -lpthread -lm
-	@echo "Linking complete!"
-
 # Compile rule for src files
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
 	@$(CC) $(CFLAGS) -c $< -o $@
@@ -38,13 +33,26 @@ $(OBJDIR)/%.o: $(CJSONDIR)/%.c
 	@$(CC) $(CFLAGS) -c $< -o $@
 	@echo "Compiled "$<" successfully!"
 
-.PHONEY: clean
+# Link the target
+$(BINDIR)/$(TARGET): $(OBJECTS)
+	@$(LINKER) $@ $(LFLAGS) $(OBJECTS) -lgurux_dlms_c -lpthread -lm
+	@echo "Linking complete!"
+
+# Build targets for single-phase and three-phase
+single_phase: CFLAGS += -DSINGLE_PHASE
+single_phase: $(BINDIR)/$(TARGET)
+
+three_phase: CFLAGS += -DTHREE_PHASE
+three_phase: $(BINDIR)/$(TARGET)
+
+# Cleanup rules
+.PHONY: clean
 clean:
 	@$(rm) $(OBJECTS)
 	@echo "Cleanup complete!" 
 	@echo $(OBJECTS)
 
-.PHONEY: remove
+.PHONY: remove
 remove: clean
 	@$(rm) $(BINDIR)/$(TARGET)
 	@echo "Executable removed!"
