KiGG Virtual Meter GUI (#3)
* added GUI files and fixed errors

* Make changes related to garbage values in automation script

* Basic integration of UI with automation script to start servers

* Added Back buttons

* Added Popup for input and saving feature

* corrected multipliers for saving

* Added tables in the Profile Page

* changed combobox size

* added GUI files and fixed errors

* Make changes related to garbage values in automation script

* Basic integration of UI with automation script to start servers

* Added Back buttons

* Added Popup for input and saving feature

* corrected multipliers for saving

* Added tables in the Profile Page

* changed combobox size

* Update manufacturer from config file working

* Calculate active and apparent power using formulas

* Changed window Modality

* Modified Saving function and code optimizations

* Integration of meter automation script with updated UI

* Move automation script to support working of GUI

* Allow float values to be entered by the user in popup

* Show message box after servers are started

* Updated displaying values in meterConfig.py

* Fixed bug in eventSimulation.py

* Modify folder paths for config files and binary files

* Remove unrequired json files

* Minor bug fixes and optimizations

* Fix config folder path to display data in meter config page

* Improved Json file creation

* Add units and center align all items in popup

* Fixed Window Size, Login Alert and Login Button

* Changed MeterConfig to Vertical Scroll

* Modified ServerPage

* Added RNG for Model and Meter Constant

* Servers configuration information is retained till GUI is closed

* Add instantaneous profile, not working for three phase meter

* UI fixes

* Fixed conversion to int

* Added Dropdown for Manufacturer

* Fix manufacturer dropdown issues

* changed alignment for combobox

* Remove instantaneous profile from association

* Remove loading dialog box

* Align dropdown items to center

* Fix file paths to make

--- a/GuruxDLMSSimpleServerExample/Python_GUI/Config/aew_three_phase_wc_config.json
+++ b/GuruxDLMSSimpleServerExample/Python_GUI/Config/aew_three_phase_wc_config.json
@@ -1,4 +1,6 @@
 {
+    "no_of_meters": 2222,
+    "meter_type": "Three Phase (WC)",
     "manufacturer": "AEW",
     "voltage_limits": {
         "L1": {
