--- a/GuruxDLMSSimpleServerExample/Python_GUI/single_phase_config.json
+++ b/GuruxDLMSSimpleServerExample/Python_GUI/single_phase_config.json
@@ -1,5 +1,5 @@
 {
-    "manufacturer": "Indian Standard",
+    "manufacturer": "AEW",
     "voltage_limits": {
         "lower_limit": 228000,
         "upper_limit": 232000
